--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,13 +16,18 @@ repos:
       - id: end-of-file-fixer #Makes sure files end in a newline and only a newline
       - id: trailing-whitespace
       - id: mixed-line-ending
-  - repo: https://github.com/astral-sh/ruff-pre-commit
-    rev: v0.9.9
+  - repo: local
     hooks:
       - id: ruff
+        name: ruff
+        entry: ruff check
+        language: python
         args: [--fix, --exit-non-zero-on-fix, --line-length=79]
         types_or: [python, pyi, jupyter]
       - id: ruff-format
+        name: ruff-format
+        entry: ruff format
+        language: python
         args: [--line-length=79]
         types_or: [python, pyi, jupyter]
   - repo: https://github.com/asottile/blacken-docs
@@ -30,11 +35,6 @@ repos:
     hooks:
       - id: blacken-docs #blacken-docs is a pre-commit hook that runs to check for issues in the docs
         additional_dependencies: [black]
-  - repo: https://github.com/asottile/pyupgrade
-    rev: v3.19.1
-    hooks:
-      - id: pyupgrade #pyupgrade is a pre-commit hook that runs to check for issues in the code
-        args: [--py36-plus]
   - repo: local
     hooks:
       - id: mypy # mypy is a pre-commit hook that runs as a linter to check for type errors
@@ -42,14 +42,6 @@ repos:
         entry: mypy
         language: system
         types: [python]
-        args:
-          [
-            "--ignore-missing-imports",
-            "--explicit-package-bases",
-            "--implicit-optional",
-            "--check-untyped-defs",
-            "--warn-redundant-casts"
-          ]
         stages:
           - "pre-push"
           - "pre-merge-commit"
@@ -57,12 +49,12 @@ repos:
     hooks:
       - id: pytest-check
         name: pytest-check
-        language: python
+        language: system
         types: [python]
         entry: pytest
         pass_filenames: false
         always_run: true
-        args: [--doctest-modules, -o, addopts=""]
+        args: [--doctest-modules, --ignore, "docs/scripts"]
   - repo: https://github.com/roy-ht/pre-commit-jupyter
     rev: v1.2.1
     hooks:
@@ -71,12 +63,6 @@ repos:
           - --remove-kernel-metadata
           - --pin-patterns
           - "[pin];[donotremove]"
-  - repo: https://github.com/cmhughes/latexindent.pl.git
-    rev: V3.24.4
-    hooks:
-      - id: latexindent
-        args:
-          - --defaultIndent="    "
   - repo: https://github.com/commitizen-tools/commitizen
     rev: v4.4.1
     hooks:
