--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,4 +74,9 @@ jobs:
 
       - name: Run tests
         run: |
-          poetry run pytest -m "not datasets" --durations=10
+          poetry run pytest -m "not datasets" --durations=10 --cov --cov-branch --cov-report=xml
+
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
