--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ optional = true
 mypy = "^1.15.0"
 pre-commit = "^4.1.0"
 pytest = "^8.3.0"
+pytest-cov = "6.0.0"
 ruff = "^0.9.0"
 ipykernel = "^6.26.0"
 ipython = "^8.32.0"
@@ -72,7 +73,6 @@ addopts = [
     "-ra",
     "-m not datasets and not slow",
     "--color=yes",
-    "--ignore=docs/scripts",
 ]
 doctest_optionflags = [
     "NORMALIZE_WHITESPACE",
