--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,60 +17,12 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@main
-
-      - name: Install system dependencies (Linux)
-        if: runner.os == 'Linux'
-        run: sudo apt-get update -qq && sudo apt-get install -y libopenblas-dev coinor-libipopt-dev build-essential cmake ninja-build
-
-      - name: Install system dependencies (macOS)
-        if: runner.os == 'macOS'
-        run: |
-          brew update -q
-          brew install ninja gfortran openblas
-          echo "FC=$(brew --prefix gfortran)/bin/gfortran" >> $GITHUB_ENV
-
-      - name: Set up Xcode
-        if: runner.os == 'macOS'
-        uses: maxim-lobanov/setup-xcode@v1
-
-      - name: Install system dependencies MSYS2 (Windows)
-        if: runner.os == 'Windows'
-        uses: msys2/setup-msys2@v2
-
-      - name: Install system dependencies (Windows)
-        if: runner.os == 'Windows'
-        run: |
-          choco install -y cmake ninja
-          refreshenv
-          C:\msys64\usr\bin\bash -lc "pacman -Sy --noconfirm mingw-w64-x86_64-gcc mingw-w64-x86_64-openblas"
-          echo "CMAKE_GENERATOR=Ninja" >> $GITHUB_ENV
-
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@main
+      - name: Install environment
+        uses: ./.github/actions/install-env  # Path to your composite action
         with:
           python-version: ${{ matrix.python-version }}
-
-      - name: Install Poetry
-        uses: snok/install-poetry@main
-        with:
-          virtualenvs-create: true
-          virtualenvs-in-project: true
-          installer-parallel: true
-
-      - name: Cache Poetry virtual environment
-        id: cache-poetry
-        uses: actions/cache@main
-        with:
-          path: ~/.cache
-          key: poetry-${{ matrix.os }}-${{ matrix.python-version }}-${{ hashFiles('**/poetry.lock') }}
-          restore-keys: |
-            poetry-${{ matrix.os }}-${{ matrix.python-version }}-
-
-      - name: Install dependencies
-        run: |
-          poetry install --no-interaction --no-ansi --with=dev
+          build-root: "true"
+          with-dev: "true"
 
       - name: Run tests
         run: |
