fix(bumpversion): add token to release action

--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -30,3 +30,4 @@ jobs:
           tag: v${{ env.REVISION }}
           bodyFile: "body.md"
           skipIfReleaseExists: true
+          token: ${{ secrets.COMMITIZEN_TOKEN }}
