--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,7 +20,7 @@ classifiers = [
     "Programming Language :: Python :: 3",
 ]
 requires-python = ">=3.10,<4.0"
-dependencies = ["numpy<3.0.0", "scipy<2.0.0", "sympy<2.0.0", "control<1.0.0", "casadi<4.0.0"]
+dependencies = ["numpy<3.0.0", "scipy<2.0.0", "sympy<2.0.0", "control<1.0.0", "casadi<4.0.0", "scikit-learn (>=1.6.1,<2.0.0)"]
 
 [project.urls]
 repository = "https://github.com/CPCLAB-UNIPI/sippy"
