build: minor changes to project build tools

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -19,7 +19,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Build SIPPY
+      - name: Build project
         uses: ./.github/actions/install-env  # Path to your composite action
         with:
           python-version: ${{ matrix.python-version }}
