--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,6 +16,9 @@ repos:
       - id: end-of-file-fixer #Makes sure files end in a newline and only a newline
       - id: trailing-whitespace
       - id: mixed-line-ending
+      - id: no-commit-to-branch
+        args: ['--pattern', 'TODO|todo|fixme|FIXME']
+        stages: [pre-push]
   - repo: local
     hooks:
       - id: ruff
