--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,41 +31,31 @@ dependencies = ["numpy<3.0.0", "scipy<2.0.0", "sympy<2.0.0", "control<1.0.0", "c
 [project.urls]
 repository = "https://github.com/CPCLAB-UNIPI/SIPPY"
 
-[tool.poetry.group.dev]
-optional = true
-
-[tool.poetry.group.dev.dependencies]
-mypy = "^1.15.0"
-pre-commit = "^4.1.0"
-pytest = "^8.3.0"
-pytest-cov = "6.0.0"
-ruff = "^0.9.0"
-ipykernel = "^6.26.0"
-ipython = "^8.32.0"
-jupyter = "^1.0.0"
-
-[tool.poetry.group.docs]
-optional = true
-
-[tool.poetry.group.docs.dependencies]
-black= "<30.0.0"
-commitizen = "<5.0.0"
-jupyter= "<2.0.0"
-markdown-exec= "<2.0.0"
-mkdocs-charts-plugin = "*"
-mkdocs-gen-files = "*"
-mkdocs-include-markdown-plugin= "<10.0.0"
-mkdocs-literate-nav = "*"
-mkdocs-macros-plugin= "<2.0.0"
-mkdocs-material= "<10.0.0"
-mkdocs-section-index = "*"
-mkdocstrings-python= "<2.0.0"
-poetry-auto-export= "0.4.0"
-
-[tool.poetry-auto-export]
-output = "docs/requirements.txt"
-without_hashes = true
-only = ["docs"]
+[project.optional-dependencies]
+dev = [
+    "mypy>=1.15.0",
+    "pre-commit>=4.1.0",
+    "pytest>=8.3.0",
+    "pytest-cov>=6.0.0",
+    "ruff>=0.9.0",
+    "ipykernel>=6.26.0",
+    "ipython>=8.32.0",
+    "jupyter>=1.0.0",
+]
+docs = [
+    "black<30.0.0",
+    "commitizen<5.0.0",
+    "jupyter<2.0.0",
+    "markdown-exec<2.0.0",
+    "mkdocs-charts-plugin",
+    "mkdocs-gen-files",
+    "mkdocs-include-markdown-plugin<10.0.0",
+    "mkdocs-literate-nav",
+    "mkdocs-macros-plugin<2.0.0",
+    "mkdocs-material<10.0.0",
+    "mkdocs-section-index",
+    "mkdocstrings-python<2.0.0",
+]
 
 [tool.commitizen]
 name = "cz_conventional_commits"
@@ -75,8 +65,8 @@ version_provider = "pep621"
 update_changelog_on_bump = true
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [tool.pytest.ini_options]
 addopts = [
