--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -10,17 +10,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Build project
-        uses: ./.github/actions/install-env
+      - name: Install uv
+        uses: astral-sh/setup-uv@v5
         with:
-          python-version: "3.12.3"
+          version: "latest"
+          enable-cache: true
+          cache-dependency-glob: "uv.lock"
 
-      - name: Install extra Ubuntu dependencies
-        run: sudo apt-get install
+      - name: Set up Python
+        run: uv python install 3.12
 
       - name: Install extra Python dependencies
         run: |
-          poetry install --with docs
+          uv sync --extra docs
 
       - name: Execute notebooks
         run: |
@@ -37,3 +39,6 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.DOCS_TOKEN }}
           REQUIREMENTS: docs/requirements.txt
+
+      - name: Minimize uv cache
+        run: uv cache prune --ci
