--- a/.github/workflows/pypi.yml
+++ b/.github/workflows/pypi.yml
@@ -15,12 +15,14 @@ jobs:
     - uses: actions/checkout@v4
 
     - name: Install uv
-      uses: astral-sh/setup-uv@v3
+      uses: astral-sh/setup-uv@v5
       with:
         version: "latest"
+        enable-cache: true
+        cache-dependency-glob: "uv.lock"
 
     - name: Set up Python
-      run: uv python install 3.11
+      run: uv python install 3.12
 
     - name: Create virtual environment
       run: uv sync
@@ -34,3 +36,6 @@ jobs:
 
     - name: Publish to PyPI
       run: uv publish
+
+    - name: Minimize uv cache
+      run: uv cache prune --ci
