ci(ci): fix missing deps, path and trigger

--- a/.github/workflows/bumpversion.yml
+++ b/.github/workflows/bumpversion.yml
@@ -2,11 +2,10 @@ name: Bump version
 
 on:
   workflow_run:
-    workflows: ["ci"]
+    workflows: [CI]
     branches: [main]
     types:
       - completed
-    conclusion: success
 
 jobs:
   bump-version:
