--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: ci
+name: CI
 
 on:
   push:
@@ -38,10 +38,10 @@ jobs:
       run: uv python install ${{ matrix.python-version }}
 
     - name: Install dependencies
-      run: uv sync --extra test
+      run: uv sync --extra dev --extra test
 
     - name: Test with pytest
-      run: uv run pytest --cov=tf2ss --cov-report=xml --cov-report=term-missing
+      run: uv run pytest --cov=sippy_unipi --cov-report=xml --cov-report=term-missing
 
     - name: Upload coverage to Codecov
       if: matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11'
@@ -75,7 +75,7 @@ jobs:
       run: uv run ruff check .
 
     - name: Type check with mypy
-      run: uv run mypy tf2ss/
+      run: uv run mypy sippy_unipi/
 
     - name: Minimize uv cache
       run: uv cache prune --ci
